# socials.io

./: .env.example  .gitignore  1.html  1_output.html  2_output.html  3.html  3_output.html  4_output.html  5.html  5_output.html  CHANGELOG.md  CLAUDE.md  INSTAGRAM_POSTING_FIXED.md  PLAN_OF_ACTION.md  README.md  TEMPLATE_DOCUMENTATION.md  TODO.md  demo_mypy.py  demo_retry.py  gsheets.py  instagram_story.py  instapost.py  instapost_push.py  local_server.py  mypy.ini  pyproject.toml  requirements-dev.txt  requirements.txt  start_server.bat  style.css  style2.css  style3.css  style5.css
.claude/: settings.local.json
.cph/: .instapost_push.py_50212053631f94310160f443c6cf9d6d.prob
.github/workflows/: Instagram_3_Carousels.yml  Instagram_Story.yml  Instagram_Story_Bitcoin.yml  Instagram_Story_Long_Calls.yml  Instagram_Story_Short_Calls.yml  Instagram_Story_Teaser.yml  ci-cd.yml  figma.yml  gsheets.yml  insta_carousel_jinja.yml  test.yaml
archive/research_docs/: ai_model_news_research.md  example_workflow.py  gpt_models_only_research.md
archive/strategy_docs/: INSTAGRAM_CAROUSEL_IMPROVEMENTS.md
base_templates/: 1.html  2.html  3.html  3_1.html  3_2.html  4.html  4_1.html  4_2.html  5.html  6.html  7.html  bitcoin_story.html  cover.html  cta.html  index.html  section_intro.html  story_teaser.html  style1.css  style2.css  style3.css  style4.css  style5.css  style6.css  style7.css  style_bitcoin_story.css  style_cover.css  style_cta.css  style_index.css  style_section_intro.css  style_trading_calls_story.css  trading_calls_story.html
config/: paths.py
core_templates/: 1.html  10.html  11.html  12.html  13.html  14.html  15.html  16.html  17.html  18.html  19.html  2.html  3.html  4.html  5.html  6.html  7.html  8.html  9.html  style.css  style17.css  style18.css  style19.css  style2.css  style3.css  style4.css  style5.css  style6.css
core_templates/carousel/: 3.html  6.html  style2.css
core_templates/fonts/: README.md  download_fonts.py  fonts.css  placeholder.txt
core_templates/stories/: README.md
data/: .gitkeep  instagram_content.json  instagram_session.json
docs/: DEPLOYMENT_SUMMARY.md  README_REVAMP_PROMPT.md  TODO.md  instagram_session_management.md
instagram/: 1_output.html  2_output.html  3_output.html  4_output.html  5_output.html  instapost.py  output.html  posting.py  style.css  style2.css  style3.css  style4.css  style5.css
instagram/templates/: 1.html  1_output.html  2.html  2_output.html  3.html  3_output.html  4.html  5.html  5_output.html  instapost.py  style.css  style2.css  style3.css  style4.css  style5.css
output/html/: 1_output.html  2_output.html  3_output.html  4_output.html  5_output.html  6_output.html
output_html/: 01_cover_output.html  02_index_output.html  03_section_bitcoin_output.html  04_bitcoin_intelligence_output.html  05_section_trading_output.html  06_trading_long_calls_output.html  07_trading_short_calls_output.html  08_section_movers_output.html  09_movers_gainers_output.html  10_movers_losers_output.html  11_section_top_cryptos_output.html  12_top_cryptos_2_24_output.html  13_top_cryptos_25_48_output.html  14_cta_output.html  1_output.html  2_output.html  3_1_output.html  3_2_output.html  3_output.html  4_1_output.html  4_2_output.html  4_output.html  5_output.html  6_output.html  7_output.html  bitcoin_story_output.html  long_calls_story_output.html  server.js  short_calls_story_output.html  story_teaser_output.html  style1.css  style2.css  style4.css  style6.css  style7.css  style_base.css  style_bitcoin_story.css  style_cta.css  style_index.css  style_section_intro.css  (+1 more)
output_html/fonts/: .gitkeep
prism/: jinja.py
prism/static/: style2.css
prism/templates/: 5.html
scripts/: env_validate.py  gsheets.py  instapost.py  local_server.py  setup_powershell_utf8.ps1  setup_windows_utf8.ps1  test_unicode_system.py  utf8_fix.py  validate_env.py  validate_project.py
scripts/auth/: create_instagram_session.py  instagram_session_status.py  test_poster_import.py  test_session.py  verify_posting_setup.py
scripts/config/: .env.backup  .env.template  UNICODE_PERMANENT_FIX.md  UNICODE_TROUBLESHOOTING.md  UTF8_FIX_SUMMARY.md
scripts/dev/: local_server.py  validate_env.py
scripts/main/: generate_7_output.py  instapost.py  instapost_new.py  instapost_push_new.py
scripts/main/content/: ai_generation_captions.py  ai_generation_news.py  generate_macro_news.py  openrouter_client.py  template_engine.py  test_gpt_models_only.py
scripts/main/data/: database.py
scripts/main/individual_posts/: README.md  generate_1_output.py  generate_2_output.py  generate_3_1_output.py  generate_3_2_output.py  generate_3_output.py  generate_4_1_output.py  generate_4_2_output.py  generate_4_output.py  generate_5_output.py  (+6 more)
scripts/setup/: setup_utf8.bat  setup_windows_utf8.bat
sessions/: instagram_session.json
src/: config.py  instagram_session_manager.py  logging_config.py  retry_utils.py
src/scripts/: create_instagram_session_auto.py  instapost.py  instapost_new.py  instapost_push.py  instapost_push_local.py  instapost_restructured.py
src/templates/: 1.html  2.html  3.html  4.html  5.html  6.html  style.css  style5.css
src/utils/: openrouter_analyzer.py  setup_openrouter.md  text_highlighter.py
static/: style.css  style3.css  style4.css  style5.css
stubs/together/: __init__.pyi
templates/: 3.html  4.html  index.html
tests/: conftest.py  final_validation.py  test_config.py  test_fonts.py  test_integration.py  test_logging.py  test_mypy.py  test_path_structure.py  test_restructure.py  test_retry.py
(+31 files in other folders)
